1565908635 | 28 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_danish.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_finnish.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_french.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_german.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_japanese.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_korean.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_polish.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_romanian.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_schinese
https://steamdb.info/patchnotes/4110013/

--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -1257,7 +1257,6 @@
 "HeadsetView_EyeMode_Right" "Right Eye"
 "HeadsetView_EyeMode_BothLeftDominant" "Both Eyes - Left Dominant"
 "HeadsetView_EyeMode_BothRightDominant" "Both Eyes - Right Dominant"
-"HeadsetView_ViewMode_Center" "Center View"
-"HeadsetView_ViewMode_Full" "Full View"
+"HeadsetView_DebugCommands" "Open Debug Commands"
 }
 }
