--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json
@@ -1,35 +1,35 @@
 {
 	"language": "english",
-	"pairing_start_failed_title": "Pairing failed",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
+	"pairing_start_failed_title": "Falha ao parear",
+	"pairing_start_failed_desc": "Não foi possível iniciar o pareamento.",
 	"pairing_initializing_title": "Initializing",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
-	"pairing_nofreedongles_title": "Pair a controller",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
+	"pairing_initializing_desc": "Buscando aparelho de RV.",
+	"pairing_initializing_instr": "Confirme que o headset está conectado ou os adaptadores sem fio estão conectados e ligados.",
+	"pairing_nofreedongles_title": "Parear controle",
+	"pairing_nofreedongles_desc": "Parece que os controles já estão conectados!",
+	"pairing_nofreedongles_instr": "Para parear um controle novo, <span class=\"Highlight\">desligue um dos controles existentes</span>.",
 	"pairing_nodongles_title": "No pairable devices detected",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
+	"pairing_nodongles_desc": "O SteamVR não encontrou um aparelho ao qual parear os controles.",
+	"pairing_nodongles_instr": "Confirme que o headset está conectado.",
+	"pairing_selectdevice_title": "Selecione o tipo do controle",
 	"pairingdevice_knuckles_controllername": "Knuckles Controller",
-	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
-	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
-	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
-	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
-	"pair_controller_title": "Pair %1$s",
+	"pairingdevice_vivewand_shortname": "Controle HTC Vice",
+	"pairingdevice_vivetracker_shortname": "Rastreador HTC Vive",
+	"pairingdevice_a_knuckles_controllername": "um controle Knuckles",
+	"pairingdevice_a_vivewand_shortname": "um Controle HTC Vive",
+	"pairingdevice_a_vivetracker_shortname": "um Rastreador HTC Vive",
+	"pair_controller_title": "Parear %1$s",
 	"pairinginstructions_generic_desc": "Place your controller into pairing mode",
-	"pairsuccess_title": "Success!",
-	"pairsuccess_desc": "Your controller is now connected.",
+	"pairsuccess_title": "Sucesso!",
+	"pairsuccess_desc": "O controle foi conectado.",
 	"pairing_button_system": "System button",
 	"pairing_button_menu": "Menu button",
 	"pairing_button_b": "B button",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
-	"pairing_button_done": "Done",
-	"pairing_button_cancel": "Cancel",
-	"pairing_success_again": "Pair another controller...",
+	"pairing_knuckles_instructions_press": "Segure %1$s e %2$s até que a luz do controle comece a piscar azul...",
+	"pairing_tracker_instructions_press": "Segure %1$s até que a luz do rastreador comece a piscar azul...",
+	"pairing_button_differentcontroller": "Desejo parear outro tipo de controle...",
+	"pairing_button_done": "OK",
+	"pairing_button_cancel": "Cancelar",
+	"pairing_success_again": "Parear outro controle...",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
