--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_french.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_french.json
@@ -1,35 +1,35 @@
 {
 	"language": "french",
-	"pairing_start_failed_title": "Pairing failed",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
+	"pairing_start_failed_title": "Échec de l'association",
+	"pairing_start_failed_desc": "Impossible de lancer l'association.",
 	"pairing_initializing_title": "Initialisation en cours",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
-	"pairing_nofreedongles_title": "Pair a controller",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
+	"pairing_initializing_desc": "Recherche de votre matériel de VR.",
+	"pairing_initializing_instr": "Assurez-vous que votre casque est connecté ou que vos adaptateurs sans fil sont branchés et allumés.",
+	"pairing_nofreedongles_title": "Associer un contrôleur",
+	"pairing_nofreedongles_desc": "Vos contrôleurs semblent déjà connectés.",
+	"pairing_nofreedongles_instr": "Pour associer un nouveau contrôleur, <span class=\"Highlight\">éteignez l'un de vos contrôleurs existants</span>.",
 	"pairing_nodongles_title": "Aucun périphérique à associer détecté",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
+	"pairing_nodongles_desc": "SteamVR ne trouve aucun matériel avec lequel associer des contrôleurs.",
+	"pairing_nodongles_instr": "Assurez-vous que votre casque est connecté.",
+	"pairing_selectdevice_title": "Sélectionnez le type de contrôleur",
 	"pairingdevice_knuckles_controllername": "Contrôleur Knuckles",
-	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
-	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
-	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
-	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
-	"pair_controller_title": "Pair %1$s",
+	"pairingdevice_vivewand_shortname": "Contrôleur HTC Vive",
+	"pairingdevice_vivetracker_shortname": "Tracker HTC Vive",
+	"pairingdevice_a_knuckles_controllername": "un contrôleur Knuckles",
+	"pairingdevice_a_vivewand_shortname": "un contrôleur HTC Vive",
+	"pairingdevice_a_vivetracker_shortname": "un tracker HTC Vive",
+	"pair_controller_title": "Associer %1$s",
 	"pairinginstructions_generic_desc": "Réglez votre contrôleur en mode association",
-	"pairsuccess_title": "Success!",
-	"pairsuccess_desc": "Your controller is now connected.",
+	"pairsuccess_title": "C'est réussi !",
+	"pairsuccess_desc": "Votre contrôleur est maintenant connecté.",
 	"pairing_button_system": "Bouton System",
 	"pairing_button_menu": "Bouton menu",
 	"pairing_button_b": "Bouton B",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
-	"pairing_button_done": "Done",
-	"pairing_button_cancel": "Cancel",
-	"pairing_success_again": "Pair another controller...",
+	"pairing_knuckles_instructions_press": "Maintenez les boutons %1$s et %2$s appuyés simultanément jusqu'à ce que le voyant du contrôleur soit bleu et clignote...",
+	"pairing_tracker_instructions_press": "Maintenez le bouton %1$s appuyé jusqu'à ce que le voyant du contrôleur soit bleu et clignote...",
+	"pairing_button_differentcontroller": "Je veux associer un autre type de contrôleur...",
+	"pairing_button_done": "OK",
+	"pairing_button_cancel": "Annuler",
+	"pairing_success_again": "Associer un autre contrôleur...",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
