--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_korean.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_korean.json
@@ -1,35 +1,35 @@
 {
-	"language": "english",
-	"pairing_start_failed_title": "Pairing failed",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
-	"pairing_initializing_title": "Initializing",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
-	"pairing_nofreedongles_title": "Pair a controller",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
-	"pairing_nodongles_title": "No pairable devices detected",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
-	"pairingdevice_knuckles_controllername": "Knuckles Controller",
-	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
-	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
+	"language": "korean",
+	"pairing_start_failed_title": "페어링 실패",
+	"pairing_start_failed_desc": "페어링을 시작하지 못했습니다.",
+	"pairing_initializing_title": "초기화 중",
+	"pairing_initializing_desc": "VR 하드웨어를 찾고 있습니다.",
+	"pairing_initializing_instr": "헤드셋이 연결되어 있거나, 무선 어댑터가 꽂혀있고 켜져 있어야 합니다.",
+	"pairing_nofreedongles_title": "컨트롤러를 페어링하세요",
+	"pairing_nofreedongles_desc": "컨트롤러가 이미 연결된 것으로 보입니다!",
+	"pairing_nofreedongles_instr": "새로운 컨트롤러를 페어링하려면, <span class=\"Highlight\">기존 컨트롤러를 꺼주세요</span>.",
+	"pairing_nodongles_title": "페이링 가능한 장치를 찾을 수 없습니다",
+	"pairing_nodongles_desc": "SteamVR은 컨트롤러를 페어링할 하드웨어를 찾을 수 없습니다",
+	"pairing_nodongles_instr": "헤드셋이 확실히 연결되어 있어야 합니다.",
+	"pairing_selectdevice_title": "컨트롤러 종류를 선택하세요",
+	"pairingdevice_knuckles_controllername": "Knuckles 컨트롤러",
+	"pairingdevice_vivewand_shortname": "HTC Vive 컨트롤러",
+	"pairingdevice_vivetracker_shortname": "HTC Vive 트래커",
 	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
 	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
 	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
-	"pair_controller_title": "Pair %1$s",
-	"pairinginstructions_generic_desc": "Place your controller into pairing mode",
-	"pairsuccess_title": "Success!",
-	"pairsuccess_desc": "Your controller is now connected.",
-	"pairing_button_system": "System button",
-	"pairing_button_menu": "Menu button",
-	"pairing_button_b": "B button",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
-	"pairing_button_done": "Done",
-	"pairing_button_cancel": "Cancel",
-	"pairing_success_again": "Pair another controller...",
+	"pair_controller_title": "%1$s 페어링",
+	"pairinginstructions_generic_desc": "컨트롤러를 페어링 모드로 설정하세요",
+	"pairsuccess_title": "성공!",
+	"pairsuccess_desc": "컨트롤러가 이제 연결되었습니다.",
+	"pairing_button_system": "시스템 버튼",
+	"pairing_button_menu": "메뉴 버튼",
+	"pairing_button_b": "B 버튼",
+	"pairing_knuckles_instructions_press": "트래커의 불빛이 파란색으로 깜빡일 때까지 %1$s과 %2$s을 길게 누르세요...",
+	"pairing_tracker_instructions_press": "트래커의 불빛이 파란색으로 깜빡일 때까지 %1$s을 길게 누르세요...",
+	"pairing_button_differentcontroller": "다른 종류의 컨트롤러를 페어링하고 싶습니다...",
+	"pairing_button_done": "완료",
+	"pairing_button_cancel": "취소",
+	"pairing_success_again": "다른 컨트롤러 페어링...",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
