--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_romanian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_romanian.json
@@ -1,35 +1,35 @@
 {
 	"language": "romanian",
-	"pairing_start_failed_title": "Pairing failed",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
+	"pairing_start_failed_title": "Asocierea a eșuat",
+	"pairing_start_failed_desc": "Asocierea nu a putut să înceapă.",
 	"pairing_initializing_title": "Inițializarea",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
-	"pairing_nofreedongles_title": "Pair a controller",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
+	"pairing_initializing_desc": "Se caută hardware-ul tău de RV.",
+	"pairing_initializing_instr": "Asigură-te că headsetul tău este conectat sau că adaptorii tăi wireless sunt alimentați și porniți.",
+	"pairing_nofreedongles_title": "Asociază un controler",
+	"pairing_nofreedongles_desc": "Se pare că ai controlerele conectate deja!",
+	"pairing_nofreedongles_instr": "Pentru a asocia un controler nou, <span class=\"Highlight\">oprește unul dintre controlerele tale existente</span>.",
 	"pairing_nodongles_title": "Nu a fost detectat niciun dispozitiv care poate fi asociat",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
+	"pairing_nodongles_desc": "SteamVR nu poate găsi niciun hardware cu care să asocieze controlerele.",
+	"pairing_nodongles_instr": "Asigură-te că headsetul este conectat.",
+	"pairing_selectdevice_title": "Selectează tipul tău de controler",
 	"pairingdevice_knuckles_controllername": "Controler Knuckles",
-	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
-	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
-	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
-	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
-	"pair_controller_title": "Pair %1$s",
+	"pairingdevice_vivewand_shortname": "Controler HTC Vive",
+	"pairingdevice_vivetracker_shortname": "Tracker HTC Vive",
+	"pairingdevice_a_knuckles_controllername": "un controler Knuckles",
+	"pairingdevice_a_vivewand_shortname": "un controler HTC Vive",
+	"pairingdevice_a_vivetracker_shortname": "un tracker HTC Vive",
+	"pair_controller_title": "Asociază %1$s",
 	"pairinginstructions_generic_desc": "Activează modul de asociere pentru controlerul tău",
-	"pairsuccess_title": "Success!",
-	"pairsuccess_desc": "Your controller is now connected.",
+	"pairsuccess_title": "Succes!",
+	"pairsuccess_desc": "Acum controlerul tău este conectat.",
 	"pairing_button_system": "Butonul de sistem",
 	"pairing_button_menu": "Butonul de meniu",
 	"pairing_button_b": "Butonul B",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
-	"pairing_button_done": "Done",
-	"pairing_button_cancel": "Cancel",
-	"pairing_success_again": "Pair another controller...",
+	"pairing_knuckles_instructions_press": "Apasă și menține apăsat %1$s și %2$s până când lumina de pe controler începe să fie albastră și intermitentă...",
+	"pairing_tracker_instructions_press": "Apasă și menține apăsat %1$s până când lumina de pe tracker începe să fie albastră și intermitentă...",
+	"pairing_button_differentcontroller": "Vreau să asociez un alt tip de controler...",
+	"pairing_button_done": "Terminat",
+	"pairing_button_cancel": "Anuleazǎ",
+	"pairing_success_again": "Asociază un alt controler...",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
