--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_schinese.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_schinese.json
@@ -6,7 +6,7 @@
 	"pairing_initializing_desc": "正在查找您的 VR 硬件。",
 	"pairing_initializing_instr": "请确认您的头戴式显示器已连接，或您的无线适配器已插好并开启。",
 	"pairing_nofreedongles_title": "配对控制器",
-	"pairing_nofreedongles_desc": "看起来您的控制器已连接！",
+	"pairing_nofreedongles_desc": "看起来您的控制器已连接好了！",
 	"pairing_nofreedongles_instr": "要配对一个新控制器，请<span class=\"Highlight\">关闭您现有控制器中的一个</span>。",
 	"pairing_nodongles_title": "未检测到可配对设备",
 	"pairing_nodongles_desc": "SteamVR 无法找到任何能与控制器配对的硬件。",
@@ -25,8 +25,8 @@
 	"pairing_button_system": "系统键",
 	"pairing_button_menu": "菜单键",
 	"pairing_button_b": "B 键",
-	"pairing_knuckles_instructions_press": "按下并按住 %1$s 和 %2$s 直至控制器开始闪烁蓝灯…",
-	"pairing_tracker_instructions_press": "按下并按住 %1$s 直至追踪器开始闪烁蓝灯…",
+	"pairing_knuckles_instructions_press": "长按 %1$s 和 %2$s 直至控制器开始闪烁蓝灯……",
+	"pairing_tracker_instructions_press": "长按 %1$s 直至追踪器开始闪烁蓝灯……",
 	"pairing_button_differentcontroller": "我想配对不同类型的控制器...",
 	"pairing_button_done": "完成",
 	"pairing_button_cancel": "取消",
