--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_swedish.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_swedish.json
@@ -1,35 +1,35 @@
 {
 	"language": "swedish",
-	"pairing_start_failed_title": "Pairing failed",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
+	"pairing_start_failed_title": "Ihopparning misslyckades",
+	"pairing_start_failed_desc": "Ihopparning kunde ej påbörjas.",
 	"pairing_initializing_title": "Initialiserar",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
-	"pairing_nofreedongles_title": "Pair a controller",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
-	"pairing_nodongles_title": "Hittade inga enheter som kan paras",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
+	"pairing_initializing_desc": "Letar efter din VR-hårdvara.",
+	"pairing_initializing_instr": "Se till att ditt headset är anslutet eller dina trådlösa adaptrar är inkopplade och påslagna.",
+	"pairing_nofreedongles_title": "Para ihop en kontroll",
+	"pairing_nofreedongles_desc": "Det verkar som att dina kontroller redan är anslutna!",
+	"pairing_nofreedongles_instr": "För att para ihop en ny kontroll, <span class=\"Highlight\">stäng av en av dina befintliga kontroller</span>.",
+	"pairing_nodongles_title": "Hittade inga enheter för ihopparning",
+	"pairing_nodongles_desc": "SteamVR kan inte hitta någon hårdvara att para kontroller till.",
+	"pairing_nodongles_instr": "Se till att ditt headset är anslutet.",
+	"pairing_selectdevice_title": "Välj din kontrolltyp",
 	"pairingdevice_knuckles_controllername": "Knuckles-kontroll",
-	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
-	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
-	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
-	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
-	"pair_controller_title": "Pair %1$s",
+	"pairingdevice_vivewand_shortname": "HTC Vive-kontroll",
+	"pairingdevice_vivetracker_shortname": "HTC Vive-spårningsenhet",
+	"pairingdevice_a_knuckles_controllername": "en Knuckles-kontroll",
+	"pairingdevice_a_vivewand_shortname": "en HTC Vive-kontroll",
+	"pairingdevice_a_vivetracker_shortname": "en HTC Vive-spårningsenhet",
+	"pair_controller_title": "Para ihop %1$s",
 	"pairinginstructions_generic_desc": "Sätt kontrollen i parningsläge",
-	"pairsuccess_title": "Success!",
-	"pairsuccess_desc": "Your controller is now connected.",
+	"pairsuccess_title": "Klart!",
+	"pairsuccess_desc": "Din kontroll är nu ansluten.",
 	"pairing_button_system": "Systemknapp",
 	"pairing_button_menu": "Menyknapp",
 	"pairing_button_b": "B-knapp",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
-	"pairing_button_done": "Done",
-	"pairing_button_cancel": "Cancel",
-	"pairing_success_again": "Pair another controller...",
+	"pairing_knuckles_instructions_press": "Tryck och håll in både %1$s och %2$s tills lampan på kontrollen börjar blinka blått...",
+	"pairing_tracker_instructions_press": "Tryck och håll in %1$s tills lampan på spåraren börjar blinka blått...",
+	"pairing_button_differentcontroller": "Jag vill para ihop en annan slags kontroll...",
+	"pairing_button_done": "Klar",
+	"pairing_button_cancel": "Avbryt",
+	"pairing_success_again": "Para ihop annan kontroll...",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
