--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_thai.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_thai.json
@@ -1,17 +1,17 @@
 {
 	"language": "ไทย",
 	"pairing_start_failed_title": "การเชื่อมโยงล้มเหลว",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
+	"pairing_start_failed_desc": "การเชื่อมโยงไม่สามารถเริ่มต้นได้",
 	"pairing_initializing_title": "การเริ่มต้น",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
+	"pairing_initializing_desc": "กำลังค้นหาฮาร์ดแวร์ VR ของคุณ",
+	"pairing_initializing_instr": "ตรวจสอบให้แน่ใจว่าเครื่องสวมศีรษะของคุณได้เชื่อมต่อแล้ว หรือได้เสียบปลั๊กอะแดปเตอร์แบบไร้สายและกดเปิดแล้ว",
 	"pairing_nofreedongles_title": "เชื่อมโยงคอนโทรลเลอร์",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
+	"pairing_nofreedongles_desc": "ดูเหมือนว่าคอนโทรลเลอร์ของคุณได้เชื่อมต่ออยู่แล้ว!",
+	"pairing_nofreedongles_instr": "สำหรับการเชื่อมโยงคอนโทรลเลอร์ใหม่ <span class=\"Highlight\">ให้ปิดเครื่องคอนโทรลเลอร์เครื่องใดเครื่องหนึ่งของคุณ</span>",
 	"pairing_nodongles_title": "ตรวจไม่พบอุปกรณ์ที่เชื่อมโยงได้",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
+	"pairing_nodongles_desc": "SteamVR ไม่สามารถตรวจพบฮาร์ดแวร์ใด ๆ สำหรับการเชื่อมโยงกับคอนโทรลเลอร์",
+	"pairing_nodongles_instr": "ตรวจสอบให้แน่ใจว่าเครื่องสวมศีรษะของคุณเชื่อมต่อแล้ว",
+	"pairing_selectdevice_title": "เลือกประเภทคอนโทรลเลอร์ของคุณ",
 	"pairingdevice_knuckles_controllername": "คอนโทรลเลอร์ Knuckles",
 	"pairingdevice_vivewand_shortname": "คอนโทรลเลอร์ HTC Vive",
 	"pairingdevice_vivetracker_shortname": "เครื่องติดตาม HTC Vive",
@@ -21,13 +21,13 @@
 	"pair_controller_title": "เชื่อมโยง %1$s",
 	"pairinginstructions_generic_desc": "วางคอนโทรลเลอร์ของคุณเพื่อเข้าสู่โหมดเชื่อมโยง",
 	"pairsuccess_title": "สำเร็จ!",
-	"pairsuccess_desc": "Your controller is now connected.",
+	"pairsuccess_desc": "คอนโทรลเลอร์ของคุณได้เชื่อมต่อแล้วในขณะนี้",
 	"pairing_button_system": "ปุ่มระบบ",
 	"pairing_button_menu": "ปุ่มเมนู",
 	"pairing_button_b": "ปุ่ม B",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
+	"pairing_knuckles_instructions_press": "กดและกดค้างไว้ทั้ง %1$s และ %2$s จนกว่าไฟบนเครื่องคอนโทรลเลอร์จะกระพริบเป็นสีฟ้า...",
+	"pairing_tracker_instructions_press": "กดและกด %1$s ค้างไว้ จนกว่าไฟบนเครื่องติดตามตำแหน่งจะกระพริบเป็นสีฟ้า...",
+	"pairing_button_differentcontroller": "ฉันต้องการเชื่อมโยงคอนโทรลเลอร์ประเภทอื่น",
 	"pairing_button_done": "เสร็จสมบูรณ์",
 	"pairing_button_cancel": "ยกเลิก",
 	"pairing_success_again": "เชื่อมโยงคอนโทรลเลอร์อื่น...",
