--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_ukrainian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_ukrainian.json
@@ -4,7 +4,7 @@
 	"pairing_start_failed_desc": "Не вдалося розпочати поєднання.",
 	"pairing_initializing_title": "Ініціалізація",
 	"pairing_initializing_desc": "Шукаємо ваше обладнання ВР.",
-	"pairing_initializing_instr": "Переконайтеся, що ваш шолом під’єднадно, а бездротові приймачі встромлено та ввімкнено.",
+	"pairing_initializing_instr": "Переконайтеся, що ваш шолом під’єднано, а бездротові приймачі встромлено та ввімкнено.",
 	"pairing_nofreedongles_title": "Поєднати контролер",
 	"pairing_nofreedongles_desc": "Схоже, ваші контролери вже під’єднані!",
 	"pairing_nofreedongles_instr": "Для поєднання нового контролера <span class=\"Highlight\">вимкніть один із поточних</span>.",
@@ -13,8 +13,8 @@
 	"pairing_nodongles_instr": "Переконайтеся, що ваш шолом увімкнено та під’єднано.",
 	"pairing_selectdevice_title": "Виберіть тип контролера",
 	"pairingdevice_knuckles_controllername": "Контролер Knuckles",
-	"pairingdevice_vivewand_shortname": "контролер HTC Vive",
-	"pairingdevice_vivetracker_shortname": "відстежувач HTC Vive",
+	"pairingdevice_vivewand_shortname": "Контролер HTC Vive",
+	"pairingdevice_vivetracker_shortname": "Відстежувач HTC Vive",
 	"pairingdevice_a_knuckles_controllername": "контролер Knuckles",
 	"pairingdevice_a_vivewand_shortname": "контролер HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "відстежувач HTC Vive",
