--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_finnish.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_finnish.json
@@ -1,35 +1,35 @@
 {
 	"language": "finnish",
-	"pairing_start_failed_title": "Pairing failed",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
+	"pairing_start_failed_title": "Pariliitos epäonnistui",
+	"pairing_start_failed_desc": "Pariliitoksen aloitus epäonnistui.",
 	"pairing_initializing_title": "Alustaa",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
-	"pairing_nofreedongles_title": "Pair a controller",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
+	"pairing_initializing_desc": "Haetaan VR-laitteistoa.",
+	"pairing_initializing_instr": "Tarkista, että lasit on yhdistetty ja langattomat adapterit on kytketty ja päällä.",
+	"pairing_nofreedongles_title": "Yhdistä ohjain",
+	"pairing_nofreedongles_desc": "Ohjaimet on jo yhdistetty!",
+	"pairing_nofreedongles_instr": "<span class=\"Highlight\">Sammuta päällä olevat ohjaimet</span>, jotta voit yhdistää uuden ohjaimen.",
 	"pairing_nodongles_title": "Yhdistettäviä laitteita ei löytynyt.",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
+	"pairing_nodongles_desc": "SteamVR ei löydä yhtään laitetta, johon ohjaimet voisi yhdistää.",
+	"pairing_nodongles_instr": "Varmista, että VR-lasisi on yhdistetty.",
+	"pairing_selectdevice_title": "Valitse ohjaintyyppi",
 	"pairingdevice_knuckles_controllername": "Knuckles Controller",
 	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
-	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
-	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
-	"pair_controller_title": "Pair %1$s",
+	"pairingdevice_a_knuckles_controllername": "Knuckles-ohjain",
+	"pairingdevice_a_vivewand_shortname": "HTC Vive -ohjain",
+	"pairingdevice_a_vivetracker_shortname": "HTC Vive Tracker",
+	"pair_controller_title": "Yhdistä %1$s",
 	"pairinginstructions_generic_desc": "Aseta ohjain paritustilaan",
-	"pairsuccess_title": "Success!",
-	"pairsuccess_desc": "Your controller is now connected.",
+	"pairsuccess_title": "Onnistui",
+	"pairsuccess_desc": "Ohjaimesi on yhdistetty.",
 	"pairing_button_system": "Järjestelmä-painike",
 	"pairing_button_menu": "Valikkopainike",
 	"pairing_button_b": "B-painike",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
-	"pairing_button_done": "Done",
-	"pairing_button_cancel": "Cancel",
-	"pairing_success_again": "Pair another controller...",
+	"pairing_knuckles_instructions_press": "Paina ja pidä pohjassa sekä %1$s että %2$s, kunnes ohjaimen valo alkaa vilkkua sinisenä.",
+	"pairing_tracker_instructions_press": "Paina ja pidä %1$s pohjassa, kunnes ohjaimen valo alkaa vilkkua sinisenä.",
+	"pairing_button_differentcontroller": "Haluan yhdistää eri ohjaimen.",
+	"pairing_button_done": "Valmis",
+	"pairing_button_cancel": "Peruuta",
+	"pairing_success_again": "Yhdistä toinen ohjain.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
