--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_japanese.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_japanese.json
@@ -1,35 +1,35 @@
 {
-	"language": "english",
-	"pairing_start_failed_title": "Pairing failed",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
-	"pairing_initializing_title": "Initializing",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
-	"pairing_nofreedongles_title": "Pair a controller",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
-	"pairing_nodongles_title": "No pairable devices detected",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
-	"pairingdevice_knuckles_controllername": "Knuckles Controller",
-	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
-	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
-	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
-	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
-	"pair_controller_title": "Pair %1$s",
-	"pairinginstructions_generic_desc": "Place your controller into pairing mode",
-	"pairsuccess_title": "Success!",
-	"pairsuccess_desc": "Your controller is now connected.",
-	"pairing_button_system": "System button",
-	"pairing_button_menu": "Menu button",
-	"pairing_button_b": "B button",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
-	"pairing_button_done": "Done",
-	"pairing_button_cancel": "Cancel",
-	"pairing_success_again": "Pair another controller...",
+	"language": "japanese",
+	"pairing_start_failed_title": "ペアリングに失敗しました",
+	"pairing_start_failed_desc": "ペアリングを開始できませんでした。",
+	"pairing_initializing_title": "初期化中",
+	"pairing_initializing_desc": "VRハードウェアを検出しています。",
+	"pairing_initializing_instr": "ヘッドセットが接続されていること、またはワイヤレスアダプターが接続され電源が入っていることを確認してください。",
+	"pairing_nofreedongles_title": "コントローラのペアリング",
+	"pairing_nofreedongles_desc": "コントローラは既に接続されています！",
+	"pairing_nofreedongles_instr": "新たなコントローラをペアリングするには、<span class=\"Highlight\">既存のコントローラの1つの電源を切ってください</span>。",
+	"pairing_nodongles_title": "ペアリング可能なデバイスは検出されませんでした",
+	"pairing_nodongles_desc": "SteamVRは、コントローラをペアリングするためのハードウェアを検出できませんでした。",
+	"pairing_nodongles_instr": "ヘッドセットが接続されていることを確認してください。",
+	"pairing_selectdevice_title": "コントローラのタイプを選択",
+	"pairingdevice_knuckles_controllername": "ナックルズコントローラ",
+	"pairingdevice_vivewand_shortname": "HTC Viveコントローラ",
+	"pairingdevice_vivetracker_shortname": "HTC Viveトラッカー",
+	"pairingdevice_a_knuckles_controllername": "ナックルズコントローラ",
+	"pairingdevice_a_vivewand_shortname": "HTC Viveコントローラ",
+	"pairingdevice_a_vivetracker_shortname": "HTC Viveトラッカー",
+	"pair_controller_title": "%1$sのペアリング",
+	"pairinginstructions_generic_desc": "コントローラをペアリングモードにしてください",
+	"pairsuccess_title": "成功！",
+	"pairsuccess_desc": "コントローラが接続されました。",
+	"pairing_button_system": "システムボタン",
+	"pairing_button_menu": "メニューボタン",
+	"pairing_button_b": "Bボタン",
+	"pairing_knuckles_instructions_press": "トラッカーのライトが青く点滅し始めるまで%1$sと%2$sを押し続けます...",
+	"pairing_tracker_instructions_press": "トラッカーのライトが青く点滅し始めるまで%1$sを押し続けます...",
+	"pairing_button_differentcontroller": "他のタイプのコントローラをペアリング...",
+	"pairing_button_done": "OK",
+	"pairing_button_cancel": "キャンセル",
+	"pairing_success_again": "別のコントローラをペアリング...",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
