--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_tchinese.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_tchinese.json
@@ -1,35 +1,35 @@
 {
-	"language": "english",
-	"pairing_start_failed_title": "Pairing failed",
-	"pairing_start_failed_desc": "Pairing was unable to start.",
-	"pairing_initializing_title": "Initializing",
-	"pairing_initializing_desc": "Looking for your VR hardware.",
-	"pairing_initializing_instr": "Make sure your headset is connected or your wireless adapters are plugged in and turned on.",
-	"pairing_nofreedongles_title": "Pair a controller",
-	"pairing_nofreedongles_desc": "It looks like your controllers are already connected!",
-	"pairing_nofreedongles_instr": "To pair a new controller, <span class=\"Highlight\">turn off one of your existing controllers</span>.",
-	"pairing_nodongles_title": "No pairable devices detected",
-	"pairing_nodongles_desc": "SteamVR is unable to find any hardware to pair controllers to.",
-	"pairing_nodongles_instr": "Make sure your headset is connected.",
-	"pairing_selectdevice_title": "Select your controller type",
-	"pairingdevice_knuckles_controllername": "Knuckles Controller",
-	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
-	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
-	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
-	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
-	"pair_controller_title": "Pair %1$s",
-	"pairinginstructions_generic_desc": "Place your controller into pairing mode",
-	"pairsuccess_title": "Success!",
-	"pairsuccess_desc": "Your controller is now connected.",
-	"pairing_button_system": "System button",
-	"pairing_button_menu": "Menu button",
-	"pairing_button_b": "B button",
-	"pairing_knuckles_instructions_press": "Press and hold both the %1$s and %2$s until the light on the controller begins blinking blue...",
-	"pairing_tracker_instructions_press": "Press and hold the %1$s until the light on the tracker begins blinking blue...",
-	"pairing_button_differentcontroller": "I want to pair a different type of controller...",
-	"pairing_button_done": "Done",
-	"pairing_button_cancel": "Cancel",
-	"pairing_success_again": "Pair another controller...",
+	"language": "tchinese",
+	"pairing_start_failed_title": "配對失敗",
+	"pairing_start_failed_desc": "無法開始配對。",
+	"pairing_initializing_title": "正在初始化",
+	"pairing_initializing_desc": "正在尋找您的 VR 硬體。",
+	"pairing_initializing_instr": "請確認頭戴顯示器已連接妥當，或已插入並開啟無線配接器。",
+	"pairing_nofreedongles_title": "配對控制器",
+	"pairing_nofreedongles_desc": "看起來您已連接上控制器了！",
+	"pairing_nofreedongles_instr": "若希望配對新的控制器，<span class=\"Highlight\">請先關閉一個現有的控制器</span>。",
+	"pairing_nodongles_title": "未偵測到可配對的裝置",
+	"pairing_nodongles_desc": "SteamVR 找不到任何能與控制器配對的硬體。",
+	"pairing_nodongles_instr": "請確認您的頭戴顯示器已連接。",
+	"pairing_selectdevice_title": "請選擇您的控制器類型",
+	"pairingdevice_knuckles_controllername": "Knuckles 控制器",
+	"pairingdevice_vivewand_shortname": "HTC Vive 控制器",
+	"pairingdevice_vivetracker_shortname": "HTC Vive 移動定位器",
+	"pairingdevice_a_knuckles_controllername": " Knuckles 控制器",
+	"pairingdevice_a_vivewand_shortname": " HTC Vive 控制器",
+	"pairingdevice_a_vivetracker_shortname": " HTC Vive 移動定位器",
+	"pair_controller_title": "配對%1$s",
+	"pairinginstructions_generic_desc": "將控制器調整為配對模式",
+	"pairsuccess_title": "成功！",
+	"pairsuccess_desc": "您的控制器現已連接完成。",
+	"pairing_button_system": "系統鍵",
+	"pairing_button_menu": "選單鍵",
+	"pairing_button_b": " B 鍵",
+	"pairing_knuckles_instructions_press": "按住%1$s和%2$s不放，直到控制器開始閃爍藍燈…",
+	"pairing_tracker_instructions_press": "按住%1$s不放，直到定位器開始閃爍藍燈…",
+	"pairing_button_differentcontroller": "我想配對一個不同類型的控制器…",
+	"pairing_button_done": "完成",
+	"pairing_button_cancel": "取消",
+	"pairing_success_again": "配對另一個控制器…",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
