1566430994 | 6 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libworldrenderer_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/steam.inf
https://steamdb.info/patchnotes/4127648/

--- a/content/vrmonitor/translations/vrmonitor_errors_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_english.txt
@@ -870,7 +870,7 @@
 "Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL" "vrmonitor://open/settings/basestation/recovery"
 
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header" "Device No Longer Supported"
-"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description" "Your %1 (%2) is a pre-production development tool and is no longer supported.<br><br><font color=#ff0000>Functionality is not expected. Please replace immediately.</font>"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description" "<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Action" " "
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_ActionURL" " "
 
